# Satellite_Sim

./: Satellite_GCS_AI_Coding_Instructions.docx  extract.ps1  gcs_log.txt  instructions.txt  instructions_utf8.txt  sat_log.txt
satellite-gcs-rts/: Cargo.toml  build_check.txt  build_check2.txt  build_check3.txt  build_check4.txt  build_err.txt  build_err2.txt  build_err2_utf8.txt  build_err3.txt  build_err3_utf8.txt  build_err_utf8.txt  gcs_errors.txt  gcs_explanation.txt  gcs_log.txt  gcs_log_utf8.txt  gcs_sim_log.txt  gcs_sim_log_utf8.txt  gcs_test_errors.txt  gcs_test_errors_2.txt  gcs_test_errors_3.txt  sat_log.txt  sat_log_utf8.txt  sat_sim_log.txt  sat_sim_log_utf8.txt  sat_test_errors.txt  sat_test_errors_2.txt  satellite_ocs_explanation.txt
satellite-gcs-rts/ground/: Cargo.toml
satellite-gcs-rts/ground/src/: fault_mgr.rs  main.rs  perf_monitor.rs  state.rs  telemetry_rx.rs  ui.rs  uplink_tx.rs  watchdog.rs
satellite-gcs-rts/satellite/: Cargo.toml  sat_test_errors_3.txt
satellite-gcs-rts/satellite/src/: buffer.rs  downlink.rs  fault.rs  main.rs  scheduler.rs  sensor.rs  state.rs  ui.rs  uplink_rx.rs  watchdog.rs
satellite-gcs-rts/shared/: Cargo.toml
satellite-gcs-rts/shared/src/: config.rs  lib.rs  metrics.rs  packets.rs  types.rs
