[package]
name = "ground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ground"
path = "src/main.rs"

[dependencies]
shared        = { path = "../shared" }
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode       = "1"
serde         = { version = "1", features = ["derive"] }
hdrhistogram  = "7"
rand          = "0.8"
tokio-util    = { version = "0.7", features = ["rt"] }
clap          = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ratatui       = "0.26"
crossterm     = "0.27"
