[package]
name = "satellite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "satellite"
path = "src/main.rs"

[dependencies]
shared        = { path = "../shared" }
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bincode       = "1"
serde         = { version = "1", features = ["derive"] }
hdrhistogram  = "7"
rand          = "0.8"
tokio-util    = { version = "0.7.18", features = ["codec"] }
bytes         = "1"
clap          = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Media"] }
crossbeam-channel = "0.5"
ratatui       = "0.26"
crossterm     = "0.27"
futures       = "0.3"
